syntax = "proto3";

option csharp_namespace = "Fleetmanagement.GrpcAPI";


message DeleteRequest
{
	int32 Id = 1;
}